Fixed layout issues for flash tab in experimentation view

--- a/src/main/resources/webapp/css/wisegui.css
+++ b/src/main/resources/webapp/css/wisegui.css
@@ -2,10 +2,6 @@ body {
 	padding-top: 10px;
 }
 
-.modal.WiseGuiLoginDialog {
-
-}
-
 .modal {
 	width: 800px;
 	margin: -250px 0 0 -400px;
